--- a/YouDrink_V1.0/YouDrink_index.html
+++ b/YouDrink_V1.0/YouDrink_index.html
@@ -2,17 +2,21 @@
 <html>
 
 <head>
+    <link rel = "styledrink" href = "YouDrink_Design.css">
     <title>MyDrinkDiary</title>
+    
 </head>
 
 <body>
+<!--Я набухался , но этого никто не узнает хаха!-->>
+    <h1>Russian Developer Inc.</h1>
+    <hr />
+    <p>
+        I drink every day , "I think go drink!". - It's my crid <br /> <strong>Mine shprache internzional!</strong>
+    </p>
+
     <p>
         Russian Developer, &copy; , 2020 ,<del> Vinogradov Dmitrii Vecheslavovich.</del>
-
-
-    </p>
-    <p>
-        I drink every day , "I think go drink!". - It's my crid <br/> <strong>Mine shprache internzional!</strong>
     </p>
 
 
