--- a/YouDrink_V1.0/YouDrink_index.html
+++ b/YouDrink_V1.0/YouDrink_index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel = "styledrink" href = "YouDrink_Design.css">
+    <link rel = "stylesheet" href = "YouDrink_Design.css">
     <title>MyDrinkDiary</title>
     
 </head>
@@ -14,10 +14,11 @@
     <p>
         I drink every day , "I think go drink!". - It's my crid <br /> <strong>Mine shprache internzional!</strong>
     </p>
-
+    <div id = "RD">
     <p>
         Russian Developer, &copy; , 2020 ,<del> Vinogradov Dmitrii Vecheslavovich.</del>
     </p>
+    </div>
 
 
 </body>>
