--- a/YouDrink_V1.0/YouDrink_index.html
+++ b/YouDrink_V1.0/YouDrink_index.html
@@ -14,8 +14,8 @@
     <p>
         I drink every day , "I think go drink!". - It's my crid <br /> <strong>Mine shprache internzional!</strong>
     </p>
-    <div id = "RD">
-    <p>
+    <div>
+    <p class = "RD">
         Russian Developer, &copy; , 2020 ,<del> Vinogradov Dmitrii Vecheslavovich.</del>
     </p>
     </div>
