--- a/YouDrink_V1.0/YouDrink_index.html
+++ b/YouDrink_V1.0/YouDrink_index.html
@@ -9,12 +9,12 @@
 
 <body>
 <!--Я набухался , но этого никто не узнает хаха!-->>
-    <h1>Russian Developer Inc.</h1>
+    <div class = "sects">
+    <p>Russian Developer Inc.</p>
     <hr />
-    <p>
+    <p class = "Drink_Font">
         I drink every day , "I think go drink!". - It's my crid <br /> <strong>Mine shprache internzional!</strong>
     </p>
-    <div>
     <p class = "RD">
         Russian Developer, &copy; , 2020 ,<del> Vinogradov Dmitrii Vecheslavovich.</del>
     </p>
