--- a/YouDrink_V1.0/YouDrink_index.html
+++ b/YouDrink_V1.0/YouDrink_index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<!--Я набухался , но этого никто не узнает хаха!-->>
+<!--Я набухался , но этого никто не узнает хаха!-->
     <div class = "sects">
     <p>Russian Developer Inc.</p>
     <hr />
