--- a/YouDrink_V1.0/YouDrink_index.html
+++ b/YouDrink_V1.0/YouDrink_index.html
@@ -12,6 +12,8 @@
     <div class = "sects">
     <p>Russian Developer Inc.</p>
     <hr />
+    </div>
+    <div>
     <p class = "Drink_Font">
         I drink every day , "I think go drink!". - It's my crid <br /> <strong>Mine shprache internzional!</strong>
     </p>
