--- a/YouDrink_V1.0/YouDrink_index.html
+++ b/YouDrink_V1.0/YouDrink_index.html
@@ -15,7 +15,8 @@
     </div>
     <div>
     <p class = "Drink_Font">
-        I drink every day , "I think go drink!". - It's my crid <br /> <strong>Mine shprache internzional!</strong>
+        I <b>drink</b> every day , "I think go <b>drink</b>!". - It's my crid <br /> 
+        <strong>Mine shprache internzional!</strong>
     </p>
     <p class = "RD">
         Russian Developer, &copy; , 2020 ,<del> Vinogradov Dmitrii Vecheslavovich.</del>
