--- a/YouDrink_V1.0/YouDrink_index.html
+++ b/YouDrink_V1.0/YouDrink_index.html
@@ -10,16 +10,16 @@
 <body>
 <!--Я набухался , но этого никто не узнает хаха!-->
     <div class = "sects">
-    <p>Russian Developer Inc.</p>
-    <hr />
+        <p>Russian Developer Inc.</p>
     </div>
+        <hr />
     <div>
     <p class = "Drink_Font">
         I <b>drink</b> every day , "I think go <b>drink</b>!". - It's my crid <br /> 
         <strong>Mine shprache internzional!</strong>
     </p>
     <p class = "RD">
-        Russian Developer, &copy; , 2020 ,<del> Vinogradov Dmitrii Vecheslavovich.</del>
+         &copy; ,Russian Developer, 2020 ,<del> Vinogradov Dmitrii Vecheslavovich.</del>
     </p>
     </div>
 
