--- a/YouDrink_V1.0/YouDrink_index.html
+++ b/YouDrink_V1.0/YouDrink_index.html
@@ -19,7 +19,7 @@
         <strong>Mine shprache internzional!</strong>
     </p>
     <p class = "RD">
-         &copy; ,Russian Developer, 2020 ,<del> Vinogradov Dmitrii Vecheslavovich.</del>
+         &copy; Russian Developer(<del> Vinogradov Dmitrii Vecheslavovich.</del>) 2020 
     </p>
     </div>
 
