--- a/YouDrink_V1.0/YouDrink_index.html
+++ b/YouDrink_V1.0/YouDrink_index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel = "stylesheet" href = "YouDrink_Design.css">
-    <title>MyDrinkDiary</title>
+    <title>Russain Drink Corp.</title>
     
 </head>
 
@@ -14,12 +14,20 @@
     </div>
         <hr />
     <div>
-    <p class = "Drink_Font">
-        I <b>drink</b> every day , "I think go <b>drink</b>!". - It's my crid <br /> 
+        <p class = "Drink_Font">
+        I <b>drink</b> every day , "I think go <b>drink</b>!". - It's my motto <br /> 
         <strong>Mine shprache internzional!</strong>
-    </p>
+     </p>
+    <div class = "Drink_Font">
+        <p>
+        Hello my students , today it's good day to drink Vodka!<br />
+        Alchol shop's "Russian Developer" - take you the best Vodka in the world!<br /> 
+        
+        </p>
+    </div>
+    <div>
     <p class = "RD">
-         &copy; Russian Developer(<del> Vinogradov Dmitrii Vecheslavovich.</del>) 2020 
+         &copy; Russian Developer(<del> Vinogradov Dmitrii Vecheslavovich</del>) 2020 
     </p>
     </div>
 
