--- a/YouDrink_V1.0/YouDrink_home.html
+++ b/YouDrink_V1.0/YouDrink_home.html
@@ -6,26 +6,19 @@
     <title>Russain Drink Corp.</title>
     <script src="YouDrink_func.js"> </script>
 </head>
-
-<body>
 <div class = "navbar">
     <a href="YouDrink_home.html" class="navbar-brand">Home</a>
     <a href="YouDrink_index.html" class = "navbar-brand">Index</a>
 </div>
+<body>
 <!--Я набухался , но этого никто не узнает хаха!-->
-    <div id="VodkaImg" class = "sects" >
+     <div id="VodkaImg" class = "sects" >
         <p>Russian Developer Inc.</p>
     </div>
-        <hr />
+    <hr />
     <div>
-        <p class = "Drink_Font">
-        I <b>drink</b> every day. "Don't think,just <b>drink</b>!". - It's my motto <br /> 
-        <strong>Mine shprache internzional!</strong>
-     </p>
-    <div class = "Drink_Font2">
         <p>
-        Hello buyer, today it's good day to drink Vodka!<br />
-        Alcohol shop's "Russian Developer" - take you the best Vodka in the world!<br />
+            it place you can drink!
         </p>
     </div>
     <hr />
